--- a/templates/404.html
+++ b/templates/404.html
@@ -7,7 +7,8 @@
         <meta name="description" content="" />
         <meta name="author" content="" />
         <title>404 Error - ITAM Admin</title>
-        <link href="css/styles.css" rel="stylesheet" />
+        <link rel = "icon" href ="{{ url_for('static',filename='images/asu_icon.png') }}" type = "image/x-icon">
+        <link rel="stylesheet" href="{{url_for('static',filename='css/styles.css')}}"/>
         <script src="https://use.fontawesome.com/releases/v6.1.0/js/all.js" crossorigin="anonymous"></script>
     </head>
     <body>
@@ -18,9 +19,9 @@
                         <div class="row justify-content-center">
                             <div class="col-lg-6">
                                 <div class="text-center mt-4">
-                                    <img class="mb-4 img-error" src="assets/img/error-404-monochrome.svg" />
+                                    <img class="mb-4 img-error" src="{{url_for('static',filename='images/error-404-monochrome.svg')}}" />
                                     <p class="lead">This requested URL was not found on this server.</p>
-                                    <a href="index.html">
+                                    <a href="{{ url_for('home_page') }}">
                                         <i class="fas fa-arrow-left me-1"></i>
                                         Return to Dashboard
                                     </a>
@@ -34,11 +35,11 @@
                 <footer class="py-4 bg-light mt-auto">
                     <div class="container-fluid px-4">
                         <div class="d-flex align-items-center justify-content-between small">
-                            <div class="text-muted">Copyright &copy; Justsst Designs 2022</div>
+                            <div class="text-muted">Copyright &copy; ASU 2022</div>
                             <div>
-                                <a href="#">Privacy Policy</a>
+                                <a href="https://www.asu.edu/about/privacy">Privacy Policy</a>
                                 &middot;
-                                <a href="#">Terms &amp; Conditions</a>
+                                <a href="https://www.asu.edu/about/terms-of-use">Terms &amp; Conditions</a>
                             </div>
                         </div>
                     </div>
@@ -46,6 +47,6 @@
             </div>
         </div>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
-        <script src="js/scripts.js"></script>
+        <script src="{{url_for('static',filename='js/scripts.js')}}"></script>
     </body>
 </html>
