--- a/templates/login.html
+++ b/templates/login.html
@@ -1,71 +1,54 @@
-<!DOCTYPE html>
-<html lang="en">
-    <head>
-        <meta charset="utf-8" />
-        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-        <meta name="description" content="" />
-        <meta name="author" content="" />
-        <title>Login - ITAM Admin</title>
-        <link href="{{ url_for('static',filename='css/styles.css') }}" rel="stylesheet" />
-<!--        <link href="css/styles.css" rel="stylesheet" />-->
-        <script src="https://use.fontawesome.com/releases/v6.1.0/js/all.js" crossorigin="anonymous"></script>
-    </head>
-    <body class="bg-primary">
-        <div id="layoutAuthentication">
-            <div id="layoutAuthentication_content">
-                <main>
-                    <div class="container">
-                        <div class="row justify-content-center">
-                            <div class="col-lg-5">
-                                <div class="card shadow-lg border-0 rounded-lg mt-5">
-                                    <div class="card-header"><h3 class="text-center font-weight-light my-4">ITAM Projects</h3></div>
-                                    <div class="card-body">
-                                        <form>
-                                            <div class="form-floating mb-3">
-                                                <input required="true" class="form-control" id="typePhone" type="tel" placeholder="5487521" />
-                                                <label for="typePhone">Employee ID</label>
-                                            </div>
-                                            <div class="form-floating mb-3">
-                                                <input required="true" class="form-control" id="inputPassword" type="password" placeholder="Password" />
-                                                <label for="inputPassword">Password</label>
-                                            </div>
-                                            <div class="form-check mb-3">
-                                                <input class="form-check-input" id="inputRememberPassword" type="checkbox" value="" />
-                                                <label class="form-check-label" for="inputRememberPassword">Remember Password</label>
-                                            </div>
-                                            <div class="d-flex align-items-center justify-content-between mt-4 mb-0">
-                                                <a class="small" href="{{ url_for('forget_password') }}">Forgot Password?</a>
-                                                <a class="btn btn-primary" href="{{ url_for('home_page') }}">Login</a>
-                                            </div>
-                                        </form>
-                                    </div>
-                                    <div class="card-footer text-center py-3">
-                                        <div class="small"><a href="{{ url_for('registration') }}">Need an account? Sign up!</a></div>
-                                    </div>
+{% extends "login_base.html" %}
+{% block title %}Login{% endblock %}
+{% block pagecontent %}
+    <main>
+        <div class="container">
+            <div class="row justify-content-center">
+                <div class="col-lg-5">
+                    <div class="card shadow-lg border-0 rounded-lg mt-5">
+                        <div class="logo">
+                            <img class="center-block" style="display: block;margin-left: auto;margin-right: auto;"   src="{{ url_for('static',filename='images/asu_logo.png') }}" width="330" height="230"  />
+                        </div>
+    <!--                                    <div class="card-header"><h3 class="text-center font-weight-light my-4">ITAM Project</h3></div>-->
+                        <div class="card-body">
+                            <form action = "/login" method="post">
+                                <div class="form-floating mb-3">
+                                    <input required="true" class="form-control" id="loginemailid" name="loginemailid" type="email" placeholder="Email Address" />
+                                    <label for="loginemailid">Email Address</label>
                                 </div>
-                            </div>
+                                <div class="form-floating mb-3">
+                                    <input required="true" class="form-control" id="logininputPassword" name="logininputPassword" type="password" placeholder="Password" />
+                                    <label for="logininputPassword">Password</label>
+                                </div>
+                                <div class="form-floating mb-3">
+                                    {% with messages = get_flashed_messages(with_categories=true) %}
+                                    {% if messages %}
+                                    {% for category, message in messages %}
+                                    <div class="alert alert-{{ category }}" style="text-align:center" role="alert">
+                                        <strong>{{ message }}</strong>
+                                        <span class="closebtnalert" onclick="this.parentElement.style.display='none';">&times;</span>
+                                    </div>
+                                    {% endfor %}
+                                    {% endif %}
+                                    {% endwith %}
+                                </div>
+                                <div class="form-check mb-3">
+                                    <input class="form-check-input" id="logininputRememberPassword" name="logininputRememberPassword" type="checkbox"/>
+                                    <label class="form-check-label" for="logininputRememberPassword">Remember Password</label>
+                                </div>
+                                <div class="d-flex align-items-center justify-content-between mt-4 mb-0">
+                                    <a class="small" href="{{ url_for('forget_password') }}">Forgot Password?</a>
+<!--                                    <div class="msg" style="text-align:center;color:#FF0000">{{ login_msg }}</div>-->
+                                    <button type="submit" class="btn btn-primary btn-block">Login</button>
+                                </div>
+                            </form>
+                        </div>
+                        <div class="card-footer text-center py-3">
+                            <div class="small"><a href="{{ url_for('registration') }}">Need an account? Sign up!</a></div>
                         </div>
                     </div>
-                </main>
-            </div>
-            <div id="layoutAuthentication_footer">
-                <footer class="py-4 bg-light mt-auto">
-                    <div class="container-fluid px-4">
-                        <div class="d-flex align-items-center justify-content-between small">
-                            <div class="text-muted">Copyright &copy; Justsst Designs 2022</div>
-                            <div>
-                                <a href="#">Privacy Policy</a>
-                                &middot;
-                                <a href="#">Terms &amp; Conditions</a>
-                            </div>
-                        </div>
-                    </div>
-                </footer>
+                </div>
             </div>
         </div>
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
-        <script src="{{url_for('static',filename='js/scripts.js')}}"></script>
-<!--        <script src="js/scripts.js"></script>-->
-    </body>
-</html>
+    </main>
+{% endblock %}
